# aaa-cloud-native

./: .gitignore  CLAUDE.md  DEPLOY.md  HTTP 2 vs HTTP 1.1 Capacity Impact Analysis.litcoffee  Makefile  README.md  aaa-lookup-deployment  aaa-regression-tester-job.yaml  add_arch_slide.py  plan-01-regression-test-client.md  plan-02-database.md  plan-02-database_examples_of_profiles.litcoffee  plan-03-aaa-service.md  plan-04-api.md  plan-05-ui.md  plan-06-migration.md  plan-08-radius-server.md  radius_load.py  radius_load.sh  test.pcap
.claude/: launch.json  settings.local.json
aaa-lookup-service/: CMakeLists.txt  Dockerfile  README.md  vcpkg.json
aaa-lookup-service/src/: Config.h  HashUtils.h  Metrics.cpp  Metrics.h  Resolver.cpp  Resolver.h  main.cpp
aaa-lookup-service/src/controllers/: HealthController.cpp  HealthController.h  LookupController.cpp  LookupController.h
aaa-management-ui/: Dockerfile  README.md  index.html  nginx.conf  plan-05-ui.md  tailwind.config.cjs  vite.config.ts
aaa-radius-server/: CMakeLists.txt  Dockerfile  Dockerfile.base  README.md  radius.pcap  vcpkg.json
aaa-radius-server/src/: Config.h  Handler.cpp  Handler.h  HttpClient.h  Metrics.cpp  Metrics.h  Radius.cpp  Radius.h  main.cpp
aaa-regression-tester/: .env.example  Dockerfile  README.md  conftest.py  docker-compose.test.yml  plan-01-regression-test-client.md  push_metrics.py  pytest.ini  requirements.txt  run_all.sh  test_01_pools.py  test_01b_radius_warmup.py  test_01c_routing_domains.py  test_01d_free_cidr_finder.py  test_02_range_configs.py  test_03_iccid_profile.py  test_03_profiles_a.py  test_04_profiles_b.py  test_05_imsi_apn_profile.py  test_05_profiles_c.py  test_06_imsi_ops.py  test_07_dynamic_alloc.py  test_07b_dynamic_alloc_modes.py  test_07c_release_ips.py  test_07e_release_reconnect_all_modes.py  test_08_bulk.py  test_08_iccid_apn_profile.py  test_08_profiles_d.py  test_08b_bulk_actions.py  test_09_migration.py  test_10_errors.py  test_11_performance.py  test_12_grafana_metrics.py  test_12_radius.py  test_12b_radius_modes.py  test_12c_radius_3imsi_modes.py  test_13_export_and_ip_search.py  test_14_export_delete_reprovision.py  test_15_bulk.py  test_16_lookup_fast_path.py  (+9 more)
aaa-ui-e2e/: package.json  tsconfig.json
aio test description/: test_01b_radius_warmup.md  test_02_range_configs.md  test_04_imsi_profile.md  test_06_imsi_ops.md  test_07_dynamic_alloc.md  test_08_iccid_apn_profile.md  test_10_errors.md  test_11_performance.md  test_12_grafana_metrics.md
aio-test-description/: README.md
docs/: aaa-platform-presentation-github.pptx  aaa-platform-presentation-v2.pptx  aaa-platform-presentation.pptx  aaa-platform-product-description.docx  aaa-platform-user-guide.docx  gen-presentation.js  gen-product-description.js  gen-user-guide.js  gen_pptx.js  gen_user_guide.js  installation-guide.md  ~$aaa-platform-presentation-github.pptx
grafana/: README.md  aaa-platform-dashboard.json
load-testing/: LOAD_TEST_PLAN.md
migration-from-maria-db/: README.md
pcaps/: 2nd_aaa_exmpale.pcapng  access_request_without_response.pcap  (+1 more)
scripts/: README.md  db-init.sh  (+7 more)
(+340 files in other folders)
